[package]
name = "ndcell"
version = "0.1.0"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ndcell_lib"
path = "src/lib.rs"

[[bin]]
name = "ndcell"
path = "src/main.rs"

[dependencies]
glium = "0.25"
imgui = "0.2"
imgui-glium-renderer = "0.2"
imgui-winit-support = "0.2"
regex = "1"
seahash = "3.0"
weak-table = "0.2"

[dev-dependencies]
proptest = "0.9.4"
