[package]
name = "ndcell"
version = "0.0.1"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[lib]
name = "ndcell_lib"
path = "src/lib.rs"

[[bin]]
name = "ndcell"
path = "src/main.rs"

[dependencies]
clipboard = "0.5"
enum_dispatch = "0.2"
glium = "0.25"
imgui = "0.2"
imgui-glium-renderer = "0.2"
imgui-winit-support = "0.2"
log = "0.4"
pest = "2.1"
pest_derive = "2.1"
# preferences = "1.1"
regex = "1"
seahash = "3.0"
simple_logger = "1.0"
weak-table = "0.2"

[dev-dependencies]
proptest = "0.9.4"
