[package]
name = "ndcell_core"
version = "0.0.1"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"

[dependencies]
enum_dispatch = "0.3"
itertools = "0.9"
lazy_static = "1.4"
noisy_float = "0.1"
num = "0.3"
parking_lot = "0.11"
regex = "1"
seahash = "4.0"

[dev-dependencies]
criterion = "0.3"
proptest = "0.10"

[[bench]]
name = "cgol"
harness = false

[[bench]]
name = "rle"
harness = false
