[package]
name = "ndcell_core"
version = "0.2.0"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"

[dependencies]
itertools = "0.10"
lazy_static = "1.4"
noisy_float = "0.1"
num = "0.3"
parking_lot = "0.11"
regex = "1"
seahash = "4.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
proptest = "0.10"
rand = "0.8"

[[bench]]
name = "cgol"
harness = false

[[bench]]
name = "ndtree"
harness = false

[[bench]]
name = "rle"
harness = false
