[package]
name = "ndcell_lang"
version = "0.1.0"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
lazy_static = "1.4"
regex = "1"
thread_local = "1.0"

[dev-dependencies]
proptest = "0.10"
itertools = "0.9"
