[package]
name = "ndcell_lang"
version = "0.0.1"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"

[dependencies]
inkwell = { git = "https://github.com/HactarCE/inkwell", branch = "llvm10-0" }
itertools = "0.9"
lazy_static = "1.4"
regex = "1"
seahash = "4.0"
send_wrapper = "0.5"
thread_local = "1.0"

ndcell_core = { path = "../core" }

[dev-dependencies]
proptest = "0.10"
