[package]
name = "ndcell_lang"
version = "0.2.0-dev"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"

[dependencies]
codemap = "0.1"
codemap-diagnostic = "0.1"
inkwell = { git = "https://github.com/HactarCE/inkwell", branch = "llvm10-0" }
itertools = "0.10"
lazy_static = "1.4"
parse_int = "0.5"
paste = "1.0"
regex = "1"
seahash = "4.0"
send_wrapper = "0.5"
thread_local = "1.0"

ndcell_core = { path = "../core" }

[dev-dependencies]
proptest = "0.10"
