[package]
name = "ndcell"
version = "0.2.0"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
colorous = "1.0"
clipboard = "0.5"
css-color-parser = "0.1.2"
enum_dispatch = "0.3"
glium = "0.29"
itertools = "0.10"
imgui = "0.7"
imgui-glium-renderer = "0.7"
imgui-winit-support = "0.7"
lazy_static = "1.4"
log = "0.4"
mimalloc = { version = "*", default-features = false }
nfd2 = "0.2"
palette = "0.5"
parking_lot = "0.11"
# preferences = "1.1"
send_wrapper = "0.5"
simple_logger = "1.11"
sloth = "0.2"

ndcell_core = { path = "../core" }
ndcell_lang = { path = "../lang" }

[dev-dependencies]
proptest = "0.10"
