[package]
name = "ndcell"
version = "0.3.0-dev"
authors = ["HactarCE <6060305+HactarCE@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
colorous = "1.0"
clipboard = "0.5"
css-color-parser = "0.1.2"
enum_dispatch = "0.3"
glium = "0.29"
itertools = "0.10"
imgui = "0.7"
imgui-glium-renderer = "0.7"
imgui-winit-support = "0.7"
lazy_static = "1.4"
log = "0.4"
mimalloc = { version = "*", default-features = false }
nfd2 = "0.2"
palette = "0.5"
parking_lot = "0.11"
# preferences = "1.1"
send_wrapper = "0.5"
simple_logger = "1.11"
sloth = "0.2"

ndcell_core = { path = "../core" }
ndcell_lang = { path = "../lang" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
proptest = "0.10"

[package.metadata.winres]
FileDescription = "NDCell"
ProductName = "NDCell"
ProductVersion = "0.3.0-dev"
OriginalFilename = "ndcell.exe"
LegalCopyright = "Copyright © 2021 HactarCE"
